--- a/agenda.css
+++ b/agenda.css
@@ -19,6 +19,19 @@
             flex-direction: column;
             align-items: center;
         }
+        h1 {
+            margin: 0;
+            font-size: 1.8rem;
+            color: var(--primary);
+        }
+        
+        p.copyright {
+            margin: 8px 0 5px;
+            color: var(--text-light);
+            font-size: 0.85rem;
+            font-weight: 500;
+            opacity: 0.8;
+        }
         
         .container {
             width: 100%;
